--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -3,18 +3,22 @@ set -g default-terminal "screen-256color"
 # window position
 set -g status-justify centre
 set -g status-position bottom
+# window or split current path
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 # status bar
 set -g status-bg colour237
 set -g status-fg colour255
 # window pane
-set -g pane-border-fg colour8
-set -g pane-active-border-fg colour255
+# set -g pane-border-fg colour8
+# set -g pane-active-border-fg colour255
 # command bar
-set -g message-fg colour0
-set -g message-bg colour229
-set -g message-attr bold
+# set -g message-fg colour0
+# set -g message-bg colour229
+# set -g message-attr bold
 # statusbar style
-set -g status-attr none
+# set -g status-attr none
 set -g status-left '#[fg=colour0,bg=colour255,bold] #S:#P #[fg=colour0,bg=colour8,bold] #W '
 set -g status-right '#[fg=colour0,bg=colour8,bold] #H #[fg=colour0,bg=colour255,bold] %D %T '
 # statusbar size
@@ -25,3 +29,4 @@ set -g status-interval 1
 # bigclock style
 set -g clock-mode-colour colour243
 set -g clock-mode-style 24
+
