set new delay escape key in tmux

--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -29,4 +29,5 @@ set -g status-interval 1
 # bigclock style
 set -g clock-mode-colour colour243
 set -g clock-mode-style 24
-
+# set escape time delay
+set -sg escape-time 0
