--- a/warp/themes/GitHubLight.yaml
+++ b/warp/themes/GitHubLight.yaml
@@ -6,7 +6,7 @@
 # Accent color for UI elements
 accent: "#FD8C73"
 # Terminal background color
-background: "#ffffff"
+background: "#F7F9F9"
 # Whether the theme is lighter or darker.
 details: lighter
 # The foreground color.
