--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    email = sirawat21@gmail.com
-    user = sirawat21
+    email = <EMAIL>
+    user = <USERNAME>
 [alias]
     logg = log --all --decorate --oneline --graph
