--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,2 +1,7 @@
-host <HOST>
-    identityfile <KEY>
+Host <HOST>
+    Identityfile <KEY>
+
+Host github.com
+    Hostname ssh.github.com
+    Port 443
+    User git
