--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,47 +1,70 @@
 format = """
-[┌](bold back)$fill\
+$directory\
+$fossil_branch\
+$git_branch\
+$git_commit\
+$git_status\
+$fill\
+$nodejs\
+$cmd_duration $jobs\
 $line_break\
-[│](bold back)$directory\
-$git_branch$git_status\
-git_state\
-$line_break\
-[└─](bold back) $username[@](bold gray)$hostname\
-[ ]()$nodejs\
-[─](bold back)$character """
+$username\
+[@](bold #3D3D3D)\
+$hostname\
+$character\
+"""
 
 [username]
 show_always = true
 disabled = false
-format = "[$user](bold black)"
+format = "[$user](bold purple)"
 
 [hostname]
 trim_at = "."
 ssh_only = false
-format = "[$hostname](bold red)"
+format = "[$hostname ](bold red)"
 
 [nodejs]
-symbol = "NODEJS:"
-format = "[$symbol($version )]($style)"
+symbol= "NODE.JS:"
+format = "[$symbol ($version)](bold green)"
+
+[character]
+success_symbol = "[❯](purple)"
+error_symbol = "[❯](red)"
+vicmd_symbol = "[❮](green)"
 
 [fill]
-symbol = "─"
-style = "bold back"
+symbol = " "
 
 [directory]
-style = "bold black"
-read_only = "*"
+style = "bold blue"
+read_only = "🔒"
 truncation_length = 4
 truncate_to_repo = false
 
-[character]
-success_symbol = "[❯](bold black)"
-error_symbol = "[❯](bold red)"
-vicmd_symbol = "[❮](bold green)"
-
 [git_branch]
-symbol = ""
-format = "[$symbol($branch)]($style) "
-style = "red bold"
+symbol = "⚡️"
+format = '[$symbol$branch(:$remote_branch)]($style) '
+style = "bold red"
+
+[git_commit]
+commit_hash_length = 7
+tag_symbol = ' 🏷 '
+disabled = false
+style = 'bold green'
+format = '[\($hash$tag\)]($style) '
+
+[git_status]
+ahead = "⇡${count}"
+diverged = "⇡${ahead_count}⇣${behind_count}"
+behind = "⇣${count}"
+modified = "[+${count}](bold green)"
+untracked = "[+${count}](bold green)"
+staged = "+${count}"
+style = 'bold black'
+format = '([\[$modified | $untracked\]]($style) )'
+disabled = false
+
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
@@ -49,11 +72,17 @@ style = "bright-black"
 
 [git_metrics]
 disabled = false
+format = '([+$added]($added_style) )([-$deleted]($deleted_style) )'
 
-[time]
-disabled = false
-style = "bold white"
-format = "[$time]($style)"
+[jobs]
+symbol = ""
+style = "bold red"
+number_threshold = 1
+format = "[$symbol]($style)"
+
+[cmd_duration]
+format = "[$duration]($style)"
+style = "yellow"
 
 [custom.stunnel]
 when = "ps aux | grep stunnel | grep -v grep"
