--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,92 +1,51 @@
-format = """
+format = """\
+[](bg:#030B16 fg:#7DF9AA)\
+[󰀵 ](bg:#7DF9AA fg:#090c0c)\
+[](fg:#7DF9AA bg:#1C3A5E)\
+$time\
+[](fg:#1C3A5E bg:#3B76F0)\
 $directory\
-$fossil_branch\
+[](fg:#3B76F0 bg:#FCF392)\
 $git_branch\
-$git_commit\
 $git_status\
-$fill\
-$nodejs\
-$cmd_duration $jobs\
-$line_break\
-$username\
-[@](bold #CDCDCD)\
-$hostname\
+$git_metrics\
+[](fg:#FCF392 bg:#030B16)\
 $character\
 """
 
-[username]
-show_always = true
-disabled = false
-format = "[$user](bold #34495E)"
-
-[hostname]
-trim_at = "."
-ssh_only = false
-format = "[$hostname ](bold #34495E)"
-
-[nodejs]
-symbol= "[NODE.JS:](#52BE80)"
-format = "[$symbol([$version](#73C6B6))](bold)"
-
-[character]
-success_symbol = "[❯](#138D75)"
-error_symbol = "[❯](#E74C3C)"
-vicmd_symbol = "[❮](#17202A)"
-
-[fill]
-symbol = " "
-
 [directory]
-style = "bold #5D6D7E"
-read_only = "🔒"
-truncation_length = 4
-truncate_to_repo = false
+format = "[ ﱮ $path ]($style)"
+style = "fg:#E4E4E4 bg:#3B76F0"
 
 [git_branch]
-symbol = "[∙](red)"
-style = "#D35400"
-format = '[$symbol$branch(:$remote_branch)]($style)'
-
-
-[git_commit]
-commit_hash_length = 7
-tag_symbol = ' 🏷 '
-disabled = false
-style = 'bold green'
-format = '[\($hash$tag\)]($style) '
+format = '[ $symbol$branch(:$remote_branch) ]($style)'
+symbol = "  "
+style = "fg:#1C3A5E bg:#FCF392"
 
 [git_status]
-ahead = "⇡${count}"
-diverged = "⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
-modified = "[+${count}](bold green)"
-untracked = "[+${count}](bold green)"
-staged = "+${count}"
-format = '([\[📝$modified | 🤷$untracked\]]($style))'
-style = 'bold black'
-disabled = false
-
-
-[git_state]
-format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "bright-black"
+format = '[$all_status]($style)'
+style = "fg:#1C3A5E bg:#FCF392"
 
 [git_metrics]
+format = "([+$added]($added_style))[]($added_style)"
+added_style = "fg:#1C3A5E bg:#FCF392"
+deleted_style = "fg:bright-red bg:235"
 disabled = false
-format = '([+$added]($added_style) )([-$deleted]($deleted_style) )'
 
-[jobs]
-symbol = "⏱️"
-style = "bold red"
-number_threshold = 1
-format = "[$symbol]($style)"
+[hg_branch]
+format = "[ $symbol$branch ]($style)"
+symbol = " "
 
 [cmd_duration]
-format = "[$duration]($style)"
-style = "yellow"
+format = "[  $duration ]($style)"
+style = "fg:bright-white bg:18"
 
-[custom.stunnel]
-when = "ps aux | grep stunnel | grep -v grep"
-command = "ps -o etime= -p $(ps aux | grep stunnel | grep -v grep | awk '{print $2}')"
-style = "red"
-format = "[TUNNEL OPEN for $output]($style)"
+[character]
+success_symbol = '[ ➜](bold green) '
+error_symbol = '[ ✗](#E84D44) '
+
+[time]
+disabled = false
+time_format = "%R" # Hour:Minute Format
+style = "bg:#1d2230"
+format = '[[ 󱑍 $time ](bg:#1C3A5E fg:#8DFBD2)]($style)'
